# compression-zoo

./: .gitignore  HANDOFF.md  LICENSE  README.md
docs/: benchmarks.md  gpu-acceleration.md  method-ids.md  verify-plugins.md
plugins/: README.md
plugins/brotli/: LICENSE  Makefile  README.md
plugins/brotli/src/: BrotliCoder.cpp  BrotliCoder.h  Register.cpp
plugins/brotli/tests/: test_brotli.cpp  test_linux.cpp
plugins/bsc/: LICENSE  Makefile  README.md
plugins/bsc/src/: BscCoder.cpp  BscCoder.h  Register.cpp
plugins/bsc/tests/: bsc_cli  bsc_cli.cpp  test_linux.cpp
plugins/cmix/: LICENSE  Makefile  README.md
plugins/cmix/src/: CmixCoder.cpp  CmixCoder.h  Register.cpp
plugins/cmix/tests/: run.sh  test_linux.cpp
plugins/sdk/: LICENSE  README.md  StdAfx.h
plugins/zpaq/: LICENSE  Makefile  README.md
plugins/zpaq/src/: Register.cpp  ZpaqCoder.cpp  ZpaqCoder.h
plugins/zpaq/tests/: test_linux.cpp  test_zpaq.cpp  zpaq_cli  zpaq_cli.cpp
rust/: Cargo.toml  README.md
rust/bsc-rs/: Cargo.toml  LICENSE
rust/bsc-rs/src/: adler32.rs  bwt.rs  coder_tables.rs  format.rs  lib.rs  libbsc.rs  lzp.rs  predictor.rs  qlfc.rs  qlfc_model.rs  rangecoder.rs  sais.rs  st.rs
rust/cmix-rs/: Cargo.toml  LICENSE
rust/cmix-rs/src/: coder.rs  context_manager.rs  contexts.rs  lib.rs  mixer.rs  models.rs  orchestrator.rs  predictor.rs  preprocess.rs  state.rs  (+2 more)
rust/gpu-rs/: Cargo.toml  build.rs
rust/gpu-rs/cuda/: histogram.cu
rust/gpu-rs/src/: lib.rs
rust/sevenz-rs/: Cargo.toml  LICENSE
rust/zpaq-rs/: Cargo.toml  LICENSE
scripts/: bench.sh  build-all-plugins.sh
(+74 files in other folders)
